@startuml

title __VIEW's Class Diagram__\n

  namespace view {
    class view.DebugPanelView {
        + finallevelmessage : String
        {static} - DEF_BKG : Color
        - ballXSpeed : JSlider
        - ballYSpeed : JSlider
        - resetBalls : JButton
        - skipLevel : JButton
        + DebugPanelView()
        + setValues()
        - initialize()
        - makeButton()
        - makeSlider()
        - resetBalls()
        - skipLevel()
    }
  }
  

  namespace view {
    class view.ExitButtonView {
        + ExitButtonView()
        + actionPerformed()
    }
  }
  

  namespace view {
    class view.HighScoreView {
        + drawscore()
    }
  }
  

  namespace view {
    class view.HomeMenuView {
        + HomeMenuView()
    }
  }
  

  namespace view {
    class view.InstructionButtonView {
        ~ button : JButton
        ~ frame : JFrame
        ~ label : JLabel
        + InstructionButtonView()
        + actionPerformed()
    }
  }
  

  namespace view {
    class view.PauseMenuView {
        {static} - CONTINUE_TEXT : String
        - ContinueButtonRect : Rectangle
        {static} - EXIT_TEXT : String
        - ExitButtonRect : Rectangle
        {static} - MENU_COLOR : Color
        {static} - PAUSE_MENU_FONT : Font
        {static} - PAUSE_MENU_TEXT : String
        {static} - RESTART_TEXT : String
        - RestartButtonRect : Rectangle
        - StrLen : int
        {static} - TEXT_SIZE : int
        + getContinueButtonRect()
        + getExitButtonRect()
        + getRestartButtonRect()
        + render()
        - DrawPauseMenu()
        - GameBoardWhenPauseMenu()
    }
  }
  

  namespace view {
    class view.PlayerView {
        + PlayerView()
        + render()
    }
  }
  

  namespace view {
    class view.StartButtonView {
        + StartButtonView()
        + actionPerformed()
    }
  }
  

  view.DebugPanelView -up-|> javax.swing.JPanel
  view.DebugPanelView o-- controller.GameBoardController : gameBoardController
  view.DebugPanelView o-- model.LevelModel : level
  view.DebugPanelView o-- controller.WallController : wall
  view.ExitButtonView .up.|> java.awt.event.ActionListener
  view.ExitButtonView -up-|> javax.swing.JButton
  view.ExitButtonView o-- controller.GameFrameController : owner
  view.HighScoreView o-- controller.HighScoreController : highScoreController
  view.HighScoreView o-- controller.WallController : wall
  view.HomeMenuView -up-|> javax.swing.JPanel
  view.InstructionButtonView .up.|> java.awt.event.ActionListener
  view.InstructionButtonView -up-|> javax.swing.JButton
  view.InstructionButtonView o-- controller.GameFrameController : owner
  view.PlayerView o-- controller.PlayerController : playerController
  view.StartButtonView .up.|> java.awt.event.ActionListener
  view.StartButtonView -up-|> javax.swing.JButton
  view.StartButtonView o-- controller.GameFrameController : owner


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
